test/spec_vectors/simd_i32x4_arith2/fail/module_25.wat
(module (func $i32x4.max_u-arg-empty (result v128) (i32x4.max_u)))